--- a/packages/core/src/styles/global/index.scss
+++ b/packages/core/src/styles/global/index.scss
@@ -1,5 +1,7 @@
 // Establish a layer order up-front, FS UI base styles have the lowest priority
-@layer base, components, theme;
+@layer base,
+  components,
+theme;
 
 // FastStore UI's base styles
 @import "@faststore/ui/src/styles/global.scss";
